tests/src/frontend/typechecking/invalid/as_operator_runtime_error_3.sk
fun main(): void {
  x = 5;
  _y = x as Bool _
}
